fixing alignment of new post bar

--- a/friends.css
+++ b/friends.css
@@ -189,6 +189,12 @@
 }
 #bPublish{
 }
+
+.create-post {
+    margin-top: 11px;
+}
+
+
  .create-post .form-group .form-control {
      border: 1px solid #ccc;
      box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
@@ -198,11 +204,10 @@
     /*vertical-align: top;
     */
 }
- .create-post .tools {
-     padding: 8px 0 10px;
+ .tools {
      float: right;
-     margin-top: -61px;
-     margin-right: 4px;
+     margin-top: -54px;
+     margin-right: 5px;
 }
  .create-post .tools ul.publishing-tools {
      display: inline-block;
@@ -229,7 +234,6 @@
      width: 520px;
      list-style: none;
      overflow-y: scroll;
-     margin-bottom: 10px;
      background-color: #c0d5e3;
      border-radius: 3px;
      border: 10px solid #c0d5e3;
